# vllm-omni-blog-generator

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.baoyu-skills/baoyu-image-gen/: EXTEND.md
.baoyu-skills/baoyu-xhs-images/: EXTEND.md
.baoyu-skills/glm-image/: EXTEND.md  SKILL.md
.baoyu-skills/pr-to-xhs/: SKILL.md
docs/: ARCHITECTURE.md  IMAGE_PROVIDERS.md  WORKFLOWS.md
docs/plans/: 2026-03-09-blog-generator-design.md  2026-03-09-blog-generator-implementation.md  2026-03-09-error-handling-design.md  2026-03-09-error-handling-implementation.md  2026-03-10-xhs-auto-publish-design.md  2026-03-10-xiaohongshu-publishing-design.md  2026-03-12-glm-image-cover-design.md  2026-03-12-glm-image-cover-implementation.md
src/blog_generator/: __init__.py  cli.py  config.py
src/blog_generator/fetcher/: __init__.py  docs.py  github.py  images.py
src/blog_generator/formatter/: __init__.py  json_fmt.py  markdown.py  xiaohongshu.py  zhihu.py
src/blog_generator/generator/: __init__.py  claude.py  image.py
src/blog_generator/publisher/: __init__.py  xiaohongshu.py
src/blog_generator/utils/: __init__.py  image_overlay.py  retry.py
tests/: __init__.py  test_config.py  test_publish_image_integration.py  test_xiaohongshu_formatter.py
tests/generator/: __init__.py  test_image.py
