[project]
name = "blog-generator"
version = "0.1.0"
description = "Generate technical blog posts for vLLM-Omni releases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
blog-generator = "blog_generator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/blog_generator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
